# rshl

./: .gitattributes  .gitignore  .oracle-discord.local.xml  ARCHITECTURE.md  ARCHITECTURE_MANIFEST.md  ARCHITECTURE_V7.md  CHANGELOG.md  COGNITION.md  Cargo.toml  ECONOMICS.md  Hardening KAI Operational Boundaries.md  KAI-Start.bat  KAI.cmd  KAI_AUDIT_BENCH.md  KAI_AUDIT_REPORT.md  KAI_COMMIT_GUIDE.md  KAI_REFACTOR_PLAN.md  KAI_SESSION_HANDOFF.md  LICENSE  LIMITS.md  ONBOARDING.md  PEER_SETUP.md  PERFORMANCE.md  PERFORMANCE_AUDIT.md  POWER_EFFICIENCY.md  README.md  REPORT.html  RSHL-Inventor-Disclosure-2026.docx  RSHL-Inventor-Disclosure-2026.md  RSHL_GENERATION_FINDINGS.md  Restoring OpenJarvis Auth Functionality.md  Run_Sovereign_Architecture_Bench.bat  Stabilizing Autonomous Multi-Agent Roundtable.md  VISION.md  WHITEPAPER.md  active-memory.json  anchors.js  bench-all.bat  bench.js  build-exe.js  (+51 more)
hyperprobe-main/: .gitignore  README.md  pyproject.toml
hyperprobe-main/data/: features.json  pairs.json
hyperprobe-main/outputs/OLMo-2/: olmo2_sample.json
hyperprobe-main/src/: script.py
hyperprobe-main/src/hyperprobe/: __init__.py
kai-rust/: .gitignore  Cargo.toml  clippy_report.txt
kai-rust/data/: identity.template.json  kai-state.backup.json  kai-transcript.jsonl
kai-rust/data/ingest/: corpus_mind_philosophy_cognition.txt  corpus_physics_chemistry_math.txt  corpus_science_biology.txt  starter_general_knowledge.txt  starter_grammar_and_conversation.txt  starter_vocabulary_definitions.txt
kai-rust/scratch/: debug_encode.rs
kai-rust/src/: lib.rs  main.rs  main.rs.pre_diag.bak  main.rs.pre_repair.bak  persistence.rs
kai-rust/src/bridge/: ai_peer.rs  code_tools.rs  git_tools.rs  ipc_server.rs  mod.rs
kai-rust/src/cognition/: acc.rs  amygdala.rs  angular_gyrus.rs  atl.rs  basal_ganglia.rs  bnst.rs  candidates.rs  cerebellum.rs  claustrum.rs  compose.rs  cortisol.rs  dbb.rs  dmn.rs  dmpfc.rs  dopamine.rs  entorhinal.rs  episodic.rs  frontal_eye_fields.rs  fusiform.rs  generative.rs  global_workspace.rs  habenula.rs  hippocampus.rs  homeostasis.rs  hypothalamus.rs  idle_ingest.rs  inner_voice.rs  insula.rs  ipl.rs  language.rs  lattice.rs  lexsem.rs  locus_coeruleus.rs  mammillary_bodies.rs  mcc.rs  mirror_neurons.rs  mod.rs  mpfc.rs  nbm.rs  neural_mapper.rs  (+46 more)
kai-rust/src/core/: attention.rs  embeddings.rs  field_state.rs  lexicon.rs  mod.rs  mod.rs.pre_diag.bak  normalize.rs  oscillator.rs  regions.rs  (+9 more)
kai-rust/tests/: conversation_test.rs  integration_tests.rs
(+2993 files in other folders)
