[package]
name = "kai"
version = "5.0.0"
edition = "2021"
authors = ["Ryan Ervin <PandaProductionsLogo>"]
description = "KAI RSHL UI — Geometric Intelligence Engine"
license = "MIT"

[[bin]]
name = "kai"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
unicode-width = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
